# ruc-ov-eval

./: .gitignore  .gitmodules  README.md  judge_util.py  pyproject.toml  run_benchmark_non_agentic.py
DeepRead/: DeepRead.py  README.md  ask.sh  parser_pdf.py  utils.py
bench_framework/: __init__.py  pageindex.conf  pipeline.py  run.py  types.py
bench_framework/adapters/: __init__.py  base.py  clapnq_adapter.py  locomo_adapter.py  qasper_adapter.py
bench_framework/core/: __init__.py  judge_util.py  llm_client.py  logger.py  metrics.py  monitor.py
bench_framework/pageindex/: config_utils.py
bench_framework/recall/: __init__.py  base.py  pageindex_recall.py  text_recall.py
bench_framework/stores/: __init__.py  base.py  pageindex_store.py  viking_store.py
hipporag/: HippoRAG.py
hipporag/embedding_model/: LangChain.py  __init__.py
hipporag/information_extraction/: openie_openai.py
hipporag/llm/: __init__.py  langchain_llm.py
hipporag/utils/: config_utils.py  llm_utils.py
ov_test/: .env.example  lightrag.conf  pageindex.conf  run.py  run_batch.sh  run_per_question.py
ov_test/config/: config.yaml  config_clapnq.yaml  config_finance.yaml  config_hotpot.yaml  config_hotpotqa.yaml  config_qasper.yaml  config_syllabusqa.yaml  config_syllabusqa_test.yaml  hotpot.yaml  locomo_config.yaml  qasper_config.yaml  syllabusqa_config.yaml
ov_test/config_deepread/: clapnq.yaml  config.yaml  financebench.yaml  financebench_config.yaml  financebench_sample20.yaml  hotpotqa.yaml  locomo.yaml  locomo_sample123.yaml  qasper.yaml  syllabusqa.yaml
ov_test/config_hipporag/: config_clapnq.yaml  config_finance.yaml  config_hotpot.yaml  locomo_config.yaml  qasper_config.yaml  syllabusqa_config.yaml
ov_test/config_kohaku/: clapnq.yaml  config.yaml  financebench.yaml  financebench_sample20.yaml  hotpotqa.yaml  locomo.yaml  qasper.yaml  syllabusqa.yaml  syllabusqa_sample70.yaml
ov_test/config_kohaku_per_question/: clapnq.yaml  financebench.yaml  financebench_sample20.yaml  hotpotqa.yaml  locomo.yaml  locomo_sample123.yaml  qasper.yaml  qasper_sample31.yaml  syllabusqa.yaml  (+1 more)
pageindex/: config.yaml  config_utils.py  page_index.py  page_index_md.py  utils.py
(+88 files in other folders)
