[project]
name = "ruc-ov-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-core>=1.2.16",
    "langchain-openai>=1.1.10",
    "openviking",
    "pybind11>=3.0.2",
    "pymupdf>=1.27.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "setuptools>=82.0.1",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.3",
]

[tool.uv.workspace]
members = [
    "OpenViking"
]

[tool.uv.sources]
openviking = { workspace = true }
