[project]
name = "ruc-ov-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kohaku-rag",
    "boto3>=1.42.57",
    "gritlm>=1.0.2",
    "igraph>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.16",
    "langchain-openai>=1.1.10",
    "numpy>=2.4.2",
    "langchain-text-splitters>=1.1.1",
    "litellm>=1.81.16",
    "numpy>=2.4.2",
    "openai>=2.24.0",
    "openviking",
    "pybind11>=3.0.2",
    "pymupdf>=1.27.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "setuptools>=82.0.1",
    "sqlalchemy>=2.0.47",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
]

[tool.uv.workspace]
members = [
    "OpenViking",
    "KohakuRAG",
]

[tool.uv.sources]
openviking = { workspace = true }
kohaku-rag = { workspace = true, editable = true }
